--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -9,20 +9,18 @@ build_requires:
   ExtUtils::MakeMaker: 6.36
   Test::More: 0.94
 configure_requires:
-  ExtUtils::MakeMaker: 6.36
-distribution_type: module
-dynamic_config: 1
-generated_by: 'Module::Install version 1.04'
+  ExtUtils::MakeMaker: 0
+dynamic_config: 0
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112621'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
-module_name: Catalyst::ActionRole::BuildDBICResult
 name: Catalyst-ActionRole-BuildDBICResult
 no_index:
   directory:
-    - inc
     - t
+    - inc
 requires:
   Catalyst::Controller::ActionRole: 0.15
   Catalyst::Runtime: 5.80025
@@ -30,7 +28,4 @@ requires:
   MooseX::Types: 0.23
   Perl6::Junction: 1.40000
   Try::Tiny: 0.06
-resources:
-  license: http://dev.perl.org/licenses/
-  repository: git://github.com/jjn1056/Catalyst-ActionRole-BuildDBICResult.git
 version: 0.02
