Import of JJNAPIORK/Catalyst-ActionRole-BuildDBICResult-0.04.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-ActionRole-BuildDBICResult
gitpan-cpan-version:      0.04
gitpan-cpan-path:         JJNAPIORK/Catalyst-ActionRole-BuildDBICResult-0.04.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -5,6 +5,7 @@ author:
 build_requires:
   Catalyst::Model::DBIC::Schema: 0.43
   Catalyst::Runtime: 5.80025
+  DBD::SQLite: 1.35
   DBIx::Class: 0.08123
   ExtUtils::MakeMaker: 6.36
   Test::More: 0.94
@@ -33,4 +34,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/jjn1056/Catalyst-ActionRole-BuildDBICResult.git
-version: 0.03
+version: 0.04
